fixed icon and label alignment

--- a/styles.css
+++ b/styles.css
@@ -22,4 +22,5 @@ img, i{
 
 i, p{
     color: white;
+    display: block;
 }
